[workspace]
members = [
    "qoqo-quest",
    "roqoqo-quest",
    "quest-sys",
]

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
roqoqo = { git = 'https://github.com/HQSQuantumsimulations/qoqo', branch="main" }
qoqo = { git = 'https://github.com/HQSQuantumsimulations/qoqo', branch="main" }
