[workspace]
members = ["qoqo-quest", "roqoqo-quest", "quest-sys"]

resolver = "2"

[profile.release]
lto = true

[profile.bench]
lto = true

[patch.crates-io]
qoqo_calculator = { git = "https://github.com/dberthault/qoqo_calculator.git" }
qoqo_calculator_pyo3 = { git = "https://github.com/dberthault/qoqo_calculator.git" }
qoqo = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
roqoqo = { git = "https://github.com/dberthault/qoqo.git", branch = "Pyo3_0.12_update" }
