[package]
name = "cmake-find-openmp"
version = "0.1.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["build-dependencies"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo-quest"
homepage = "https://github.com/HQSquantumsimulations/qoqo-quest"
documentation = "https://docs.rs/quest-sys/"
description = "Use CMake to create right linking options for openmp"
exclude = ["tests*", "examples*", "*.code-workspace"]


[lib]
name = "cmake_find_openmp"
path = "src/lib.rs"
doctest = false

[dependencies]
cmake = {version ="0.1", features=[]}
