[package]
name = "qoqo-quest"
version = "0.8.0-alpha.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_quest"
documentation = "https://docs.rs/qoqo_quest/"
repository = "https://github.com/HQSquantumsimulations/qoqo_quest"
description = "QuEST simulator backend for qoqo quantum computing toolkit"
include = ["src*", "qoqo_quest", "LICENSE", "pyproject.toml", "README.md", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_quest"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.16"
features = ["num-complex"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qoqo_calculator = {version="0.8"}
qoqo_calculator_pyo3 = {version="0.8", default-features=false}
qoqo = {version="1.1.0-alpha.1", default-features=false}
roqoqo = {version="1.1.0-alpha.1"}
roqoqo-quest = {version="0.8.0-alpha.1", path="../roqoqo-quest", default-features=false}
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
test-case = "2.0.0"

[build-dependencies]
pyo3-build-config = "0.16"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
openmp = ["roqoqo-quest/openmp"]

[package.metadata.maturin]
requires-dist = ["numpy", "qoqo>=1.0.0a2", "qoqo_calculator_pyo3>=0.7.0"]
maintainer = "HQS Quantum Simulations GmbH"
maintainer-email = "info@quantumsimulations.de"
requires-python = ">=3.7"
