[package]
name = "qoqo-quest"
version = "0.15.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_quest"
documentation = "https://docs.rs/qoqo_quest/"
repository = "https://github.com/HQSquantumsimulations/qoqo_quest"
description = "QuEST simulator backend for qoqo quantum computing toolkit"
include = [
    "src*",
    "qoqo_quest",
    "LICENSE",
    "pyproject.toml",
    "README.md",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_quest"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.22"
features = ["num-complex"]

[dependencies]
qoqo = { version = "~1.18", default-features = false }
roqoqo = { version = "~1.18" }
roqoqo-quest = { version = "~0.15", path = "../roqoqo-quest", default-features = false }
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
test-case = "3.0"
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"
pyo3 = "0.22"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
openmp = ["roqoqo-quest/openmp"]
cuda = ["roqoqo-quest/cuda"]
cuquantum = ["roqoqo-quest/cuquantum"]
