[package]
name = "qoqo-quest"
version = "0.18.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_quest"
documentation = "https://docs.rs/qoqo_quest/"
repository = "https://github.com/HQSquantumsimulations/qoqo_quest"
description = "QuEST simulator backend for qoqo quantum computing toolkit"
include = [
    "src*",
    "qoqo_quest",
    "LICENSE",
    "pyproject.toml",
    "README.md",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_quest"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.25"
features = ["num-complex"]

[dependencies]
qoqo = { version = "~1.21", default-features = false }
roqoqo = { version = "~1.21" }
roqoqo-quest = { version = "~0.18", path = "../roqoqo-quest", default-features = false }
bincode = "2.0"
serde_json = "1.0"

[dev-dependencies]
test-case = "3.0"
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.25"
pyo3 = "0.25"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
openmp = ["roqoqo-quest/openmp"]
cuda = ["roqoqo-quest/cuda"]
cuquantum = ["roqoqo-quest/cuquantum"]
unstable_operation_definition = ["qoqo/unstable_operation_definition", "roqoqo/unstable_operation_definition", "roqoqo-quest/unstable_operation_definition"]
