[package]
name = "roqoqo-quest"
version = "0.13.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo-quest"
homepage = "https://github.com/HQSquantumsimulations/qoqo-quest"
documentation = "https://docs.rs/qoqo_quest/"
description = "QuEST simulator for the qoqo quantum computing toolkit"
include = ["src*", "LICENSE", "README.md", "Cargo.toml"]

[lib]
name = "roqoqo_quest"
path = "src/lib.rs"
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quest-sys = {version="0.13.0", path="../quest-sys", default-features=false}
roqoqo = {version="1.10", features=["serialize"]}

qoqo_calculator = { version="1.1"}
num-complex = {version="0.4"}
serde = { version = "1.0", features = ["derive"]}
rand = "0.8"
ndarray="0.15"
async-trait = {version = "0.1", optional = true}
futures ={version = "0.3", optional=true}
rayon = {version="1.5", optional=true}

[dev-dependencies]
test-case="3.0"
criterion = {version="0.5"}

[features]
default = []
openmp = ["quest-sys/openmp"]
async = ["async-trait", "roqoqo/async", "futures"]
parallelization = ["rayon"]
cuda = ["quest-sys/cuda"]
cuquantum = ["quest-sys/cuquantum"]

[[bench]]
name = "circuit_execution_benchmark"
harness = false
path = "benches/benchmark.rs"
